Resolves: tdf#158669 round long currency to decimal digits in use

as its predecessor did before:

commit 0c85d1ee0688435ffefd8eff797e57eac9bace27
CommitDate: Wed Jul 15 10:26:16 2020 +0200

    weld LongCurrencyControl

Change-Id: I251c976b9b3025a0faddd0f75cd303c29b1a33c8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179918
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>